# unitree_legged

./: .gitignore  README.md  deps.repos
a1_description/: CMakeLists.txt  package.xml
a1_description/launch/: view_a1.launch.py  view_gazebo_a1.launch.py
a1_description/rviz/: view_robot.rviz
a1_description/xacro/: gazebo.xacro  leg.xacro  robot.xacro
docker/: Dockerfile  README.md
unitree_a1_description/: CMakeLists.txt  package.xml
unitree_a1_description/launch/: view_a1.launch.py  view_control_a1.launch.py  view_gazebo_a1.launch.py
unitree_a1_description/meshes/: calf_new.dae
unitree_a1_description/rviz/: view_robot.rviz
unitree_a1_description/urdf/: a1.urdf
unitree_a1_description/xacro/: gazebo.xacro  leg.xacro  robot.xacro  ros2_control.xacro
unitree_a1_driver/: CMakeLists.txt  README.md  package.xml
unitree_a1_driver/include/unitree_a1_driver/: unitree_a1_driver.hpp  unitree_a1_driver_converter.hpp  unitree_a1_driver_node.hpp  visibility_control.hpp
unitree_a1_driver/launch/: unitree_a1_driver.launch.py
unitree_a1_driver/src/: unitree_a1_driver.cpp  unitree_a1_driver_converter.cpp  unitree_a1_driver_node.cpp
unitree_a1_examples/: CMakeLists.txt  README.md  package.xml
unitree_a1_examples/config/: unitree_a1_example_fixed_stand.param.yaml
unitree_a1_examples/include/unitree_a1_examples/: unitree_a1_example_fixed_stand_node.hpp  unitree_a1_example_position_node.hpp  unitree_a1_example_torque_node.hpp  unitree_a1_examples.hpp  visibility_control.hpp
unitree_a1_examples/launch/: unitree_a1_example_fixed_stand.launch.py  unitree_a1_example_position.launch.py  unitree_a1_example_torque.launch.py
unitree_a1_examples/src/: unitree_a1_example_fixed_stand_node.cpp  unitree_a1_example_position_node.cpp  unitree_a1_example_torque_node.cpp  unitree_a1_examples.cpp
unitree_a1_fixed_stand_server/: CMakeLists.txt  README.md  package.xml
unitree_a1_fixed_stand_server/include/unitree_a1_fixed_stand_server/: unitree_a1_fixed_stand_server.hpp  unitree_a1_fixed_stand_server_node.hpp  visibility_control.hpp
unitree_a1_fixed_stand_server/launch/: unitree_a1_fixed_stand_server.launch.py
unitree_a1_fixed_stand_server/src/: unitree_a1_fixed_stand_server.cpp  unitree_a1_fixed_stand_server_node.cpp
unitree_a1_highlevel/: CMakeLists.txt  README.md  package.xml
unitree_a1_highlevel/include/unitree_a1_highlevel/: unitree_a1_highlevel.hpp  unitree_a1_highlevel_node.hpp  visibility_control.hpp
unitree_a1_highlevel/launch/: unitree_a1_highlevel.launch.py
unitree_a1_highlevel/src/: unitree_a1_highlevel.cpp  unitree_a1_highlevel_node.cpp
unitree_a1_highlevel/test/: test_unitree_a1_highlevel.cpp
unitree_a1_joystick/: CMakeLists.txt  README.md  package.xml
unitree_a1_joystick/config/: unitree_a1_joystick.param.yaml
unitree_a1_joystick/include/unitree_a1_joystick/: unitree_a1_button.hpp  unitree_a1_joystick.hpp  unitree_a1_joystick_node.hpp  visibility_control.hpp
unitree_a1_joystick/launch/: unitree_a1_joystick.launch.py
unitree_a1_joystick/src/: unitree_a1_button.cpp  unitree_a1_joystick.cpp  unitree_a1_joystick_node.cpp
unitree_a1_joystick/test/: test_unitree_a1_joystick.cpp
unitree_a1_launch/: CMakeLists.txt  package.xml
unitree_a1_launch/config/: imu_filter.yaml  unitree_a1_driver.param.yaml  unitree_a1_fixed_stand_server.param.yaml  unitree_a1_joystick.param.yaml  unitree_a1_neural_control.param.yaml  unitree_a1_state_machine.param.yaml
unitree_a1_launch/launch/: unitree_launch.launch.py
unitree_a1_legged/: CMakeLists.txt  README.md  package.xml
unitree_a1_legged/config/: unitree_a1_legged.param.yaml
unitree_a1_legged/include/unitree_a1_legged/: unitree_a1_legged.hpp  unitree_a1_legged_converter.hpp  unitree_a1_legged_node.hpp  unitree_legged.hpp  unitree_legged_converter.hpp  unitree_legged_node.hpp
unitree_a1_legged/launch/: unitree_a1_legged.launch.py
unitree_a1_legged/src/: example_position.cpp  example_torque.cpp  stand.cpp  udp.cpp  unitree_a1_legged.cpp  unitree_a1_legged_converter.cpp  unitree_a1_legged_node.cpp  unitree_legged.cpp  unitree_legged_converter.cpp  unitree_legged_node.cpp
unitree_a1_legged_launch/: CMakeLists.txt  README.md  package.xml
unitree_a1_legged_launch/config/: imu_filter.yaml  unitree_a1_fixed_stand_server.param.yaml  unitree_a1_joystick.param.yaml  unitree_a1_legged.param.yaml  unitree_a1_neural_control.param.yaml
unitree_a1_legged_launch/launch/: gazebo_launch.launch.py  rviz_launch.launch.py  rviz_nn_launch.launch.py  unitree_a1_legged_launch.launch.py  unitree_launch.launch.py
unitree_a1_legged_msgs/: CMakeLists.txt  README.md  package.xml
unitree_a1_legged_msgs/action/: FixedStand.action
unitree_a1_legged_msgs/msg/: CommonMotorCmd.msg  ControlMode.msg  ControllerType.msg  DebugDoubleArray.msg  FootForceState.msg  HighCmd.msg  HighState.msg  JointCommand.msg  LegCmd.msg  LegState.msg  LowCmd.msg  LowState.msg  MotorCmd.msg  MotorState.msg  QuadrupedCmd.msg  QuadrupedState.msg  TwistStamped.msg  UnitreeHeader.msg
unitree_a1_legged_msgs/srv/: Gait.srv
unitree_a1_state_machine/: CMakeLists.txt  README.md  package.xml
unitree_a1_state_machine/include/unitree_a1_state_machine/: unitree_a1_state_machine.hpp  unitree_a1_state_machine_node.hpp
unitree_a1_state_machine/launch/: unitree_a1_state_machine.launch.py
unitree_a1_state_machine/src/: unitree_a1_state_machine.cpp  unitree_a1_state_machine_node.cpp
unitree_a1_tools/tools/: pair_grid.py  rosbag2log.py  rosbag2log2pairgrid.py  time_process.py
unitree_a1_tools/unitree_a1_data_parser/: CMakeLists.txt  README.md  package.xml
unitree_a1_tools/unitree_a1_data_parser/config/: unitree_a1_data_parser.param.yaml
unitree_a1_tools/unitree_a1_time_process/: CMakeLists.txt  README.md  package.xml
unitree_a1_tools/unitree_a1_time_process/launch/: unitree_a1_time_process.launch.py
unitree_a1_tools/unitree_a1_time_process/test/: test_unitree_a1_time_process.py
unitree_a1_tools/unitree_a1_time_process/unitree_a1_time_process/: unitree_a1_time_process.py  unitree_a1_time_process_node.py
(+3 files in other folders)
